--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="pro_ns_title">title</string>
     <string name="pro_ns_body">body</string>
     <string name="pro_ns_raw">rawBody</string>
+        <string name="pro_ns_audioURL">sheelaAudioMsgUrl</string>
+
     <string name="pro_data">data</string>
     <string name="channel_incoming_desc">This is channel is for incoming call</string>
     <string name="channel_ack_desc">This is channel is for General Acknowledgements</string>
