--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -142,6 +142,8 @@
 
     <string name="ns_pay">Pay Now</string>
     <string name="ns_viewdetails">View Details</string>
+    <string name="eventType">eventType</string>
+    <string name="others">others</string>
 
 
 </resources>
