--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -56,6 +56,7 @@
   "STR_WEARABLES":"Wearable",
   "STR_TELEHEALTH":"Telehealth",
   "STR_HOSPITALDOCUMENT":"Hospital Documents",
+  "STR_PROVIDERUPLOADED":"Provider Uploaded",
   "terms_of_service":"Terms of use",
   "privacy_policy":"Privacy policy",
   "help_support":"Help and support",
