EFHB-8912 Updated the text "Qurbook" -> "QurHome"

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -375,7 +375,7 @@
   "strBookmarkRecord":"bookmark record",
   "strChat":"Chats",
   "strFeedBack":"Feedback",
-  "strFeedbackExp":"We would like to hear from you on your experience with QurBook",
+  "strFeedbackExp":"We would like to hear from you on your experience with QurHome",
   "strAttachImage":"Attach Image",
   "strAddVoice":"Add Voice",
   "strFeedbackEmpty":"Feedback should not be empty",
