EFHB-9224 changing the app name from myFHB to QurBook

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -25,7 +25,7 @@
   "failedToInvoke":"Failed to Invoke: ",
   "notAvailable":"not available",
   "cancellationCharge":"Cancellation Charges:",
-  "APP_NAME":"myFHB",
+  "APP_NAME":"QurBook",
   "MOB_NUM":"Mobile number",
   "ENTER_MOB_NUM":"Enter your mobile number",
   "SignInOtpText":"We will send you an one time password",
