--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -25,7 +25,7 @@
   "failedToInvoke":"Failed to Invoke: ",
   "notAvailable":"not available",
   "cancellationCharge":"Cancellation Charges:",
-  "APP_NAME":"QurBook",
+  "APP_NAME":"QurHome",
   "MOB_NUM":"Mobile number",
   "ENTER_MOB_NUM":"Enter your mobile number",
   "SignInOtpText":"We will send you an one time password",
@@ -487,7 +487,7 @@
   "strAnd":" and ",
   "strPrivacyPolicy":"Privacy Policy",
   "strwelcome":"Welcome",
-  "strgetStart":"Get started with myFHB",
+  "strgetStart":"Get started with QurHome",
   "strNext":"NEXT",
   "strMobileNum":"Mobile Number",
   "strEmailOpt":"Email address",
