--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -145,5 +145,7 @@
     <string name="ns_pay">Pay Now</string>
     <string name="ns_viewdetails">View Details</string>
 
+    <string name="voice_clone_patient_assignment">voiceClonePatientAssignment</string>
+
 
 </resources>
