feature/EFHB-14485-qurhome-qurbook---receive-pus notification screen inline comment added.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -146,6 +146,8 @@
     <string name="ns_viewdetails">View Details</string>
 
     <string name="voice_clone_patient_assignment">voiceClonePatientAssignment</string>
+    <!-- This resource defines the string value "voiceClonePatientAssignment" for the key "voice_clone_patient_assignment". -->
+
 
 
 </resources>
